# CookieCutterBuilding

cookiepowder/: cookiecutter.json  requirements_dev.txt  tox.ini
cookiepowder/hooks/: post_gen_project.py
cookiepowder/{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
cookiepowder/{{cookiecutter.project_slug}}/docs/: CONTRIBUTING.md
cookiepowder/{{cookiecutter.project_slug}}/docs/sphinx/: conf.py
cookiepowder/{{cookiecutter.project_slug}}/docs/sphinx/source/: conf.py  index.md
cookiepowder/{{cookiecutter.project_slug}}/tasks/: __init__.py  docs.py  pypi_pub.py  run.py  sphinx_rtd.py  tasks_conf.toml
cookiepowder/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: settings.py
