[build-system]
requires = ["setuptools", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = '{{cookiecutter.project_name}}'
version = '{{cookiecutter.version}}'
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
authors = [
    {name = '{{cookiecutter.github_username}}', email = '{{cookiecutter.email}}' }
]
maintainers = [
    {name = '{{cookiecutter.github_username}}', email = '{{cookiecutter.email}}' }
]
keywords = ['{{ cookiecutter.project_slug }}',]
{% if cookiecutter.open_source_license == 'MIT license' -%}
license = {text = "MIT license"}
{% elif cookiecutter.open_source_license == 'BSD license' -%}
license = {text = "BSD license"}
{% elif cookiecutter.open_source_license == 'ISC license' -%}
license = {text = "ISC license"}
{% elif cookiecutter.open_source_license == 'Apache Software License 2.0' -%}
license = {text = "Apache Software License 2.0"}
{% elif cookiecutter.open_source_license == 'GNU General Public License v3' -%}
license = {text = "GNU General Public License v3"}
{% else -%}
license = {text = "Proprietary"}
{% endif %}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: {% if cookiecutter.open_source_license != 'Not open source' -%} OSI Approved :: {% endif %} {{cookiecutter.open_source_license}}",
    {% if '{{cookiecutter.framework}}' != 'None' -%}"Framework :: {{cookiecutter.framework}}"{% endif %},
]
requires-python = '{{cookiecutter.python_version}}'

[project.dependencies]
docs = [
    'django >= 2.0',
    'asgiref ~= 3.7.2',
    'sqlparse ~= 0.4.4',
    'typing-extensions ~= 4.6.3',
]

[project.optional-dependencies]
{% if cookiecutter.command_line_interface != 'No Cli'-%}
cli = ['{{cookiecutter.command_line_interface}}']
{% endif %}
dev = [
    'bumpver >= 2023.1124',
    'tox >= 4.5.1',
    'coverage >= 7.2.7', # TODO: Is this necessary or worth keeping?
    'twine >= 4.0.2', # TODO: Remove this?
    'build >= 0.10.0',
    {% if cookiecutter.use_pytest == 'y' -%}'pytest >= 7.3.2',{% endif %}
    ]
docs = [
    'sphinx >= 7.0.1',
    'myst-parser >= 2.0.0',
]


[project.urls] # TODO: Change Homepage to rtd?
Homepage = 'https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}'
Repository = 'https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}'

[project.scripts]
"manage.py" = "{{cookiecutter.project_slug}}:django_manage"



